--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,48 @@
-.App {
+header{
   text-align: center;
+  font-size: 20px;
+  color: green;
+  background-color: rgb(123, 189, 233);
+  padding-top: 1px;
+  padding-bottom: 1px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+@media only screen and (max-width: 500px) {
+  header{
+    background-color: tomato;
+   font-size:15px;
   }
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+#content{
+  padding-top: 100px;
+}
+button{
+  margin: auto;
+  display: block;
+  outline: none;
+  border: none;
+  font-size: 20px;
+  padding: 20px;
+  color: rgb(righ75, 90, 223);
+  border-radius: 5px;
+  background-color: rgb(90, 238, 134);
+}
+button:hover{
+  box-shadow: 2px 0px 2px white,0px 2px 2px white,-2px 0px 2px white,0px -2px 2px white;
+}
+button:active{
+  background-color:rgb(53, 236, 99);
+}
+#quote{
+  font-size : 20px;
+  text-align: center;
+  height: 10px;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+footer{
+  margin-top: -20px;
+  background-color: #57606f;
+  text-align: center;
+  padding: 20px;
 }
