--- a/src/index.css
+++ b/src/index.css
@@ -1,27 +1,112 @@
+* {
+  padding: 0px;
+  margin: 0px;
+}
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  border-left: 150px solid gray;
-  border-right: 150px solid gray;
-  background-image: url('./background.jpg');
-  background-size: cover;
-  background-attachment: fixed;
-  
+  margin-top: 5%;
+  background-color: #E5E5E5;
 }
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-  monospace;
+
+.main_div {
+  width: 650px;
+  padding: 25px 50px;
+  margin: auto;
+  border-radius: 2px;
+  background-color: #F0F0F0;
+  box-shadow: 1px 1px 5px rgb(207 205 205), -1px 1px 5px rgb(207 205 205), 1px -1px 5px rgb(207 205 205), -1px -1px 5px rgb(207 205 205);
+}
+
+.heading {
+  font-size: 16px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.nav {
+  display: flex;
+  justify-content: flex-end;
+  position: relative;
+  top: -24px;
+}
+
+.nav nav {
+  padding: 5px;
+  font-size: 10px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.nav .nav1 {
+  border-bottom: 2px solid red;
 }
 
 
-@media only screen and (max-width: 1000px) {
-  body {
-    border-left: 0px solid gray;
-    border-right: 0px solid gray;
-    
-  }
+
+
+.about {
+  width: 380px;
+  margin: auto;
+  border-radius: 6px;
+  background-color: white;
+  box-shadow: 5px 5px 8px rgb(211, 209, 209), -5px 5px 8px rgb(211, 209, 209), 5px -5px 8px rgb(211, 209, 209), -5px -5px 8px rgb(211, 209, 209);
+}
+
+.about .img {
+  border-radius: 50%;
+  width: 60px;
+  padding: 20px;
+}
+
+.details {
+  float:right;
+  width: 260px;
+  position: relative;
+  left: -25px;
+  margin-top: 10px;
+  font-size: 12px;
+  font-family: sans-serif;
+}
+
+.details .name {
+  font-size: 25px;
+  color: #E16259;
+  text-decoration: underline;
+  font-weight: bold;
+  padding-bottom: 4px;
+}
+
+
+.carts {
+  margin-top: 55px;
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 40px;
+  border-radius: 10px;
+}
+
+.cart {
+  width: 132px;
+  height: 50px;
+  margin: 5px;
+  background-color: white;
+  padding: 8px;
+  border-radius: 5px;
+  box-shadow: 1px 1px 7px rgb(231, 227, 227);
+  font-size: 7px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.cart .nam {
+  font-size: 12px;
+  font-weight: bold;
+  margin: 5px 0;
+}
+
+.cart .gen {
+  color: rgb(139, 139, 139);
+  font-weight: bold;
+}
+
+.cart .email {
+  color: #E16259;
+  font-weight: bold;
 }
